<resources>
    <string name="app_name">Interactive Reading</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="books_fragment_label">Books Fragment</string>
    <string name="book_detail_fragment_label">Book detail Fragment</string>
    <string name="chat_fragment_label">Chat Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="authentication_failed">Authentication Failed.</string>
    <string name="login">LOGIN</string>
    <string name="email_address">Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="invalid_credentials">*Your email or password is incorrect.</string>
    <string name="or">OR</string>
    <string name="required">Required.</string>
    <string name="too_many_requests_error">Too many failed login attempts. Try again later.</string>
    <string name="google_sign_in_unsuccessful">Google sign in was unsuccessful</string>
    <string name="search_books">Search Books</string>
    <string name="search">Search</string>
    <string name="authors">%1$s</string>
    <string name="title">Title 1</string>
    <string name="pages">Pages: %1$s</string>
    <string name="sign_out">Sign Out</string>
    <string name="description">Description</string>
    <string name="language">Language: %1$s</string>
    <string name="published_date">Published Date: %1$s</string>
    <string name="chat">chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">SEND</string>
    <string name="enter_message">Enter message</string>
    <string name="anonymous">Anonymous</string>
    <string name="error_sending_message">There was an error sending the message</string>
</resources>