<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.books.BookDetailFragment">

    <LinearLayout
        android:id="@+id/ll_movie_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_poster_image"
            android:layout_width="100dp"
            android:layout_height="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/tv_description"
            app:layout_constraintStart_toStartOf="@id/iv_poster_image"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_book_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_book_small_thumbnail"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_book_authors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authors"
                android:textSize="15sp"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/iv_book_small_thumbnail"
                app:layout_constraintTop_toBottomOf="@id/tv_book_title" />

            <TextView
                android:id="@+id/tv_book_publish_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/published_date" />

            <TextView
                android:id="@+id/tv_book_pages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pages"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/iv_book_small_thumbnail"
                app:layout_constraintTop_toBottomOf="@id/tv_book_authors" />

            <TextView
                android:id="@+id/tv_book_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language" />

            <RatingBar
                android:id="@+id/rb_star_rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:numStars="5" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_movie_details" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/btn_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description">

        <TextView
            android:id="@+id/tv_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <Button
        android:id="@+id/btn_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>