<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <ImageView
            android:id="@+id/iv_book_small_thumbnail"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_centerVertical="true"
            android:padding="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_book_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/title"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_book_small_thumbnail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_book_authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_book_title"
            android:layout_marginStart="10dp"
            android:text="@string/authors"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/iv_book_small_thumbnail"
            app:layout_constraintTop_toBottomOf="@id/tv_book_title" />

        <TextView
            android:id="@+id/tv_book_pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_book_authors"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/pages"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/iv_book_small_thumbnail"
            app:layout_constraintTop_toBottomOf="@id/tv_book_authors" />

        <TextView
            android:id="@+id/tv_book_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_book_pages"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_book_small_thumbnail"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>